tests/ui/parser/issues/issue-24375.stderr
error: expected a pattern, found an expression
  --> $DIR/issue-24375.rs:6:9
   |
LL |         tmp[0] => {}
   |         ^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == tmp[0] => {}
   |         ~~~ ++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = tmp[0];
LL ~     match z {
LL ~         VAL => {}
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { tmp[0] } => {}
   |         +++++++        +

error: aborting due to 1 previous error

